# gestalt-arch

./: .gitignore  .gitmodules  README.md
cad/components/: Boards v3.f3d  BottomSpacer v2.f3d  ClaspLeft v1.f3d  ClaspRight v1.f3d  FixedArmHolder v1.f3d  Kobuki.f3d  Lidar v1.f3d  LidarMountLegs v1.f3d  Servo v3.f3d  ServoMount v2.f3d  white_plate v3.f3d
cad/illustrator/: LidarMountPlate.ai
cad/stl/: Boards v3.stl  BottomSpacer v2.stl  ClaspLeft v1.stl  ClaspRight v1.stl  FixedArmHolder v1.stl  Lidar v1.stl  LidarMountLegs v1.stl  Servo v3.stl  ServoMount v2.stl  Turtlebot2i v9.stl  white_plate v3.stl
docs/: project-spec.pptm
firmware/apps/cor-app/: Makefile  app_config.h  buckler.h  cor-app.c  cor-app.h  main.c  servo.c  servo.h  ydlidar_x2.h
firmware/apps/gestalt-client/: Makefile  main.c
firmware/apps/lidar/: CMakeLists.txt  Makefile  data.txt  lidar_classification.c  lidar_classification.h  main.c  sort.h  uart.c
firmware/libraries/gestalt-client/: .gitignore  CMakeLists.txt  gestalt-client.c  gestalt-client.h
firmware/libraries/virtual_timer/: virtual_timer.c  virtual_timer_linked_list.c  virtual_timer_linked_list.h
simulink/: kobuki.slx
software/: SolutionParser.cpp  solution.txt
software/apps/ble-client/: ble-client.cpp  ble-client.sln  ble-client.vcxproj  ble-client.vcxproj.filters  testing.py  testing2.py  testing3.py
software/apps/cor-ui/: .gitignore  angle.txt  distance_easy.txt  distance_hard.txt  distance_medium.txt  solver_params.txt
software/apps/cor-ui/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset
software/gestalt-server/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
software/libraries/gestalt-server/: .gitignore  CMakeLists.txt  build.sh  gestalt-server.c  gestalt-server.h
software/libraries/gestalt-solver/: .gitignore  CMakeLists.txt  build.sh  gestalt-solver-tester.c  gestalt-solver-tester.cpp  gestalt-solver.c  gestalt-solver.cpp  gestalt-solver.h
software/lidar_classify/: data.txt  lidar_classification.c  lidar_classification.h
(+21 files in other folders)
